<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_items">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="textview">TextView</string>
    <string name="course_image">Course Image</string>
    <string name="note_activity_label">Edit Note</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="nav_share_message">Don\'t you think you have shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="nav_how_many">How many</string>
    <string name="nav_send">Send</string>
    <string name="nav_share_id">Share</string>
    <string name="nav_how_many_message_format">Notes: %1$d | Courses: %2$d</string>
    <string name="nav_recent_notes">Recently Viewed Notes</string>
    <string name="communicate">Communicate</string>
    <string name="enabled">Enabled</string>
    <string name="note_color">Note Color</string>
    
    <string-array name="note_color_array">
        <item>#E57373</item>
        <item>#BA68C8</item>
        <item>#64B5F6</item>
        <item>#81C784</item>
        <item>#FFF176</item>
        <item>#FFB74D</item>
        <item>#90A4AE</item>
    </string-array>
</resources>
