<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_camera"
            android:title="Notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Courses" />
        <item
            android:id="@+id/nav_recent_notes"
            android:icon="@drawable/ic_baseline_visibility_24"
            android:title="@string/nav_recent_notes" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share_id" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
            <item
                android:id="@+id/nav_how_many"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/nav_how_many" />
        </menu>
    </item>

</menu>
